--- a/config.ipynb
+++ b/config.ipynb
@@ -62,9 +62,10 @@
     "# ====================================================================================\n",
     "# ---- Where to write results ----\n",
     "TARGET_CATALOG = \"users\"            # <- set your catalog\n",
-    "TARGET_SCHEMA  = \"robert_altmiller\"  # <- set your schema (created if missing)\n",
-    "WRITE_RAW_MODE = \"overwrite\"       # \"append\" or \"overwrite\"\n",
-    "WRITE_SUMMARY_MODE = \"overwrite\"   # \"append\" or \"overwrite\""
+    "TARGET_SCHEMA  = \"robert_altmiller\" # <- set your schema (created if missing)\n",
+    "WRITE_RAW_MODE = \"append\"           # DO NOT CHANGE THIS\n",
+    "WRITE_SUMMARY_MODE = \"overwrite\"    # \"append\" or \"overwrite\"\n",
+    "DELETE_EXISTING_DATA = True         # Delete all existing data"
    ]
   },
   {
@@ -208,7 +209,7 @@
     "UC_MAX_WORKERS = 20\n",
     "\n",
     "# ---- UC batch writing (memory optimization) ----\n",
-    "UC_TABLE_BATCH_SIZE = 5000            # Write tables every N records (reduces memory usage)"
+    "UC_TABLE_BATCH_SIZE = 500            # Write tables every N records (reduces memory usage)"
    ]
   },
   {
