--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -520,6 +520,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def delete_existing_tables(\n",
+    "    spark, \n",
+    "    catalog_name: str, \n",
+    "    schema_name: str,\n",
+    "    table_patterns: List[str] = None,\n",
+    "    exclude_patterns: List[str] = None\n",
+    "):\n",
+    "    \"\"\"Delete assessment tables from catalog/schema with flexible pattern matching.\"\"\"\n",
+    "    \n",
+    "    # Default patterns if none provided\n",
+    "    if table_patterns is None:\n",
+    "        table_patterns = [\"raw_databricks_\", \"workspace_scan_summary\"]\n",
+    "    \n",
+    "    if exclude_patterns is None:\n",
+    "        exclude_patterns = []\n",
+    "    \n",
+    "    # Get all tables in the catalog and schema\n",
+    "    try:\n",
+    "        tables_df = spark.sql(f\"SHOW TABLES IN `{catalog_name}`.`{schema_name}`\")\n",
+    "        tables = [row.tableName for row in tables_df.collect()]\n",
+    "    except Exception as e:\n",
+    "        print(f\"[ERROR] Failed to list tables in {catalog_name}.{schema_name}: {e}\")\n",
+    "        return\n",
+    "    \n",
+    "    print(f\"[DELETE] Found {len(tables)} tables in {catalog_name}.{schema_name}\")\n",
+    "    \n",
+    "    # Filter tables based on patterns\n",
+    "    tables_to_delete = []\n",
+    "    for t in tables:\n",
+    "        matches_include = any(pattern in t for pattern in table_patterns)\n",
+    "        matches_exclude = any(pattern in t for pattern in exclude_patterns)\n",
+    "        \n",
+    "        if matches_include and not matches_exclude:\n",
+    "            tables_to_delete.append(t)\n",
+    "    \n",
+    "    if not tables_to_delete:\n",
+    "        print(f\"[DELETE] No tables matched the specified patterns\")\n",
+    "        return\n",
+    "    \n",
+    "    # Delete tables\n",
+    "    print(f\"[DELETE] Deleting {len(tables_to_delete)} tables...\")\n",
+    "    deleted_count = 0\n",
+    "    failed_count = 0\n",
+    "    \n",
+    "    for t in tables_to_delete:\n",
+    "        fqtn = f\"`{catalog_name}`.`{schema_name}`.`{t}`\"\n",
+    "        try:\n",
+    "            spark.sql(f\"DROP TABLE IF EXISTS {fqtn}\")\n",
+    "            print(f\"  ✓ Dropped {fqtn}\")\n",
+    "            deleted_count += 1\n",
+    "        except Exception as e:\n",
+    "            print(f\"  ✗ Failed to drop {fqtn}: {e}\")\n",
+    "            failed_count += 1\n",
+    "    \n",
+    "    print(f\"[DELETE] ✅ Deleted {deleted_count} tables\")\n",
+    "    if failed_count > 0:\n",
+    "        print(f\"[DELETE] ❌ Failed to delete {failed_count} tables\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
