--- a/main.ipynb
+++ b/main.ipynb
@@ -219,6 +219,9 @@
     "    print(\"[▶️ RUN] Starting full workspace assessment...\")\n",
     "    print(f\"[CONFIG] Streaming writes: {'ENABLED' if ENABLE_STREAMING_WRITES else 'DISABLED'}\")\n",
     "    \n",
+    "    # Delete existing data prior to next workspace assessment\n",
+    "    if DELETE_EXISTING_DATA: delete_existing_tables()\n",
+    "    \n",
     "    # Initialize components\n",
     "    data_processor = DataProcessor(spark, workspace_url, start_ts, TARGET_CATALOG, TARGET_SCHEMA)\n",
     "    \n",
@@ -342,20 +345,7 @@
    },
    "outputs": [],
    "source": [
-    "# catalog_name = \"users\"\n",
-    "# schema_name = \"robert_altmiller\"\n",
-    "\n",
-    "# # Get all tables in the catalog and schema\n",
-    "# tables_df = spark.sql(f\"SHOW TABLES IN {catalog_name}.{schema_name}\")\n",
-    "# tables = [row.tableName for row in tables_df.collect()]\n",
-    "\n",
-    "# print(f\"Found {len(tables)} tables in {catalog_name}.{schema_name}\")\n",
-    "\n",
-    "# # Drop all tables\n",
-    "# for t in tables:\n",
-    "#     fqtn = f\"{catalog_name}.{schema_name}.{t}\"\n",
-    "#     print(f\"Dropping {fqtn} ...\")\n",
-    "#     spark.sql(f\"DROP TABLE IF EXISTS {fqtn}\")\n"
+    "\n"
    ]
   }
  ],
