Improve table deletion and Spark keep-alive configuration
- Enhanced delete_existing_tables() function with flexible pattern matching
  * Added table_patterns and exclude_patterns parameters
  * Improved error handling and progress reporting
  * Better SQL quoting with backticks for catalog/schema/table names
  * Added statistics for deleted and failed operations

- Made Spark keep-alive interval configurable
  * Added SPARK_KEEPALIVE_INTERVAL constant (30s for serverless optimization)
  * Updated keep_spark_alive() function to use the constant
  * Updated docstring to reflect correct default value

--- a/unity_catalog.ipynb
+++ b/unity_catalog.ipynb
@@ -37,7 +37,10 @@
     "import requests\n",
     "import threading\n",
     "from typing import Dict, List, Tuple\n",
-    "from concurrent.futures import ThreadPoolExecutor, as_completed"
+    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+    "\n",
+    "# Spark keep-alive configuration\n",
+    "SPARK_KEEPALIVE_INTERVAL = 30  # seconds"
    ]
   },
   {
@@ -70,7 +73,7 @@
     "    Args:\n",
     "        spark: SparkSession instance\n",
     "        stop_event: threading.Event to signal when to stop\n",
-    "        interval: Seconds between keep-alive pings (default: 60)\n",
+    "        interval: Seconds between keep-alive pings (default: 30)\n",
     "    \"\"\"\n",
     "    while not stop_event.is_set():\n",
     "        try:\n",
@@ -244,11 +247,11 @@
     "        if spark:\n",
     "            keep_alive_thread = threading.Thread(\n",
     "                target=keep_spark_alive,\n",
-    "                args=(spark, stop_keep_alive, 60),\n",
+    "                args=(spark, stop_keep_alive, SPARK_KEEPALIVE_INTERVAL),\n",
     "                daemon=True\n",
     "            )\n",
     "            keep_alive_thread.start()\n",
-    "            print(\"[UC] Spark keep-alive thread started (60s interval)\")\n",
+    "            print(f\"[UC] Spark keep-alive thread started ({SPARK_KEEPALIVE_INTERVAL}s interval)\")\n",
     "\n",
     "        try:\n",
     "            allowlist = allowlist or []\n",
