--- a/main.ipynb
+++ b/main.ipynb
@@ -220,7 +220,7 @@
     "    print(f\"[CONFIG] Streaming writes: {'ENABLED' if ENABLE_STREAMING_WRITES else 'DISABLED'}\")\n",
     "    \n",
     "    # Delete existing data prior to next workspace assessment\n",
-    "    if DELETE_EXISTING_DATA: delete_existing_tables()\n",
+    "    if DELETE_EXISTING_DATA: delete_existing_tables(spark, TARGET_CATALOG, TARGET_SCHEMA)\n",
     "    \n",
     "    # Initialize components\n",
     "    data_processor = DataProcessor(spark, workspace_url, start_ts, TARGET_CATALOG, TARGET_SCHEMA)\n",
