Remove UC table batch writing logic
- Removed UC_TABLE_BATCH_SIZE configuration parameter
- Simplified enumerate_unity_catalog() to collect all tables in memory
- Removed write_callback and batch_size parameters from UC enumeration
- Tables now written once at the end instead of during enumeration
- Eliminates serverless timeout issues during incremental writes
- Trade-off: Higher memory usage but more reliable on serverless compute

--- a/config.ipynb
+++ b/config.ipynb
@@ -206,10 +206,7 @@
     "UC_CATALOG_ALLOWLIST: List[str] = []  # e.g. [\"main\", \"hive_metastore\"]; empty = all\n",
     "UC_CATALOG_LIMIT = 0                  # 0 = all; N = first N catalogs\n",
     "UC_SCHEMA_LIMIT_PER_CATALOG = 0       # 0 = all; N = first N schemas per catalog\n",
-    "UC_MAX_WORKERS = 20\n",
-    "\n",
-    "# ---- UC batch writing (memory optimization) ----\n",
-    "UC_TABLE_BATCH_SIZE = 500            # Write tables every N records (reduces memory usage)"
+    "UC_MAX_WORKERS = 20"
    ]
   },
   {
