--- a/main.ipynb
+++ b/main.ipynb
@@ -249,15 +249,9 @@
     "        if ENABLE_STREAMING_WRITES and mount_data:\n",
     "            data_processor.write_single_raw_table(\"dbfs_mount_points\", mount_data)\n",
     "        \n",
-    "        # Step 2: Unity Catalog enumeration with batch writing\n",
+    "        # Step 2: Unity Catalog enumeration\n",
     "        base_url = f\"https://{workspace_url}\"\n",
     "        headers = {\"Authorization\": f\"Bearer {token}\"}\n",
-    "        \n",
-    "        # Define write callback for batch writing UC tables\n",
-    "        def write_uc_batch(table_type, records):\n",
-    "            \"\"\"Callback to write UC table batches during enumeration.\"\"\"\n",
-    "            if ENABLE_STREAMING_WRITES:\n",
-    "                data_processor.write_single_raw_table(table_type, records)\n",
     "        \n",
     "        uc_counts, uc_raw_data = enumerate_uc(\n",
     "            base_url=base_url,\n",
@@ -267,20 +261,22 @@
     "            catalog_limit=UC_CATALOG_LIMIT,\n",
     "            schema_limit_per_catalog=UC_SCHEMA_LIMIT_PER_CATALOG,\n",
     "            max_workers=UC_MAX_WORKERS,\n",
-    "            write_callback=write_uc_batch if ENABLE_STREAMING_WRITES else None,\n",
-    "            batch_size=UC_TABLE_BATCH_SIZE,\n",
     "            spark=spark\n",
     "        )\n",
     "        \n",
-    "        # Write UC schema data (tables are already written in batches if streaming)\n",
+    "        # Write UC data immediately if streaming is enabled\n",
     "        if uc_raw_data.get(\"schemas\"):\n",
     "            raw_data[\"databricks_schema\"] = uc_raw_data[\"schemas\"]\n",
     "            if ENABLE_STREAMING_WRITES:\n",
     "                data_processor.write_single_raw_table(\"databricks_schema\", uc_raw_data[\"schemas\"])\n",
     "        \n",
-    "        # Only write tables in batch mode (streaming mode already wrote them)\n",
-    "        if uc_raw_data.get(\"tables\") and not ENABLE_STREAMING_WRITES:\n",
-    "            raw_data[\"databricks_table\"] = uc_raw_data[\"tables\"]\n",
+    "        if uc_raw_data.get(\"tables\"):\n",
+    "            if ENABLE_STREAMING_WRITES:\n",
+    "                # Write tables immediately in streaming mode\n",
+    "                data_processor.write_single_raw_table(\"databricks_table\", uc_raw_data[\"tables\"])\n",
+    "            else:\n",
+    "                # Collect for batch mode\n",
+    "                raw_data[\"databricks_table\"] = uc_raw_data[\"tables\"]\n",
     "        \n",
     "        # Step 3: Process and write data\n",
     "        if ENABLE_STREAMING_WRITES:\n",
