Add keep-alive ping logging to track Spark session health
- Print success message every 30 seconds when keep-alive ping succeeds
- Shows ping count and interval for visibility during long UC enumerations
- Helps confirm keep-alive thread is working on serverless compute

--- a/unity_catalog.ipynb
+++ b/unity_catalog.ipynb
@@ -75,14 +75,17 @@
     "        stop_event: threading.Event to signal when to stop\n",
     "        interval: Seconds between keep-alive pings (default: 30)\n",
     "    \"\"\"\n",
+    "    ping_count = 0\n",
     "    while not stop_event.is_set():\n",
     "        try:\n",
     "            # Simple operation to keep session alive\n",
     "            spark.sql(\"SELECT 1\").collect()\n",
+    "            ping_count += 1\n",
+    "            print(f\"[KEEP-ALIVE] ✓ Ping #{ping_count} successful (interval: {interval}s)\")\n",
     "            time.sleep(interval)\n",
     "        except Exception as e:\n",
     "            if VERBOSE_LOG:\n",
-    "                print(f\"[KEEP-ALIVE] Warning: {e}\")\n",
+    "                print(f\"[KEEP-ALIVE] ✗ Warning: {e}\")\n",
     "            time.sleep(interval)"
    ]
   },
