made changes to config.ipynb

--- a/config.ipynb
+++ b/config.ipynb
@@ -63,9 +63,9 @@
     "# ---- Where to write results ----\n",
     "TARGET_CATALOG = \"users\"            # <- set your catalog\n",
     "TARGET_SCHEMA  = \"robert_altmiller\" # <- set your schema (created if missing)\n",
-    "WRITE_RAW_MODE = \"append\"           # DO NOT CHANGE THIS\n",
+    "WRITE_RAW_MODE = \"append\"           # \"append\" or \"overwrite\"\n",
     "WRITE_SUMMARY_MODE = \"overwrite\"    # \"append\" or \"overwrite\"\n",
-    "DELETE_EXISTING_DATA = True         # Delete all existing data"
+    "DELETE_EXISTING_DATA = True         # Delete all existing workspace assessment data"
    ]
   },
   {
@@ -251,7 +251,7 @@
     "]\n",
     "\n",
     "# Global pagination controls (can be overridden per endpoint)\n",
-    "ENABLE_PAGINATION_BY_DEFAULT = True\n",
+    "ENABLE_PAGINATION_BY_DEFAULT = False\n",
     "\n",
     "# Per-endpoint pagination overrides\n",
     "# Set to True/False to enable/disable pagination for specific endpoints\n",
