Implement catalog-by-catalog processing with memory management
- Add per-catalog processing loop to minimize memory usage on serverless
- Write tables immediately after each catalog via callback (streaming mode)
- Use explicit del statements for catalog_tables to release memory
- Add periodic gc.collect() every 100 catalogs for garbage collection
- Add write_callback parameter to enumerate_unity_catalog and enumerate_uc
- Add write_uc_batch callback in main.ipynb for streaming mode
- Process catalogs sequentially with progress tracking
- Improves memory efficiency for large UC enumerations

--- a/main.ipynb
+++ b/main.ipynb
@@ -254,6 +254,15 @@
     "        base_url = f\"https://{workspace_url}\"\n",
     "        headers = {\"Authorization\": f\"Bearer {token}\"}\n",
     "        \n",
+    "        # Define write callback for per-catalog memory management (streaming mode only)\n",
+    "        def write_uc_batch(table_type, records):\n",
+    "            \"\"\"Write UC records immediately to free memory.\"\"\"\n",
+    "            if records:\n",
+    "                data_processor.write_single_raw_table(table_type, records)\n",
+    "        \n",
+    "        # Only use callback in streaming mode (enables per-catalog memory cleanup)\n",
+    "        write_callback = write_uc_batch if ENABLE_STREAMING_WRITES else None\n",
+    "        \n",
     "        uc_counts, uc_raw_data = enumerate_uc(\n",
     "            base_url=base_url,\n",
     "            headers=headers,\n",
@@ -262,10 +271,11 @@
     "            catalog_limit=UC_CATALOG_LIMIT,\n",
     "            schema_limit_per_catalog=UC_SCHEMA_LIMIT_PER_CATALOG,\n",
     "            max_workers=UC_MAX_WORKERS,\n",
-    "            spark=spark\n",
+    "            spark=spark,\n",
+    "            write_callback=write_callback\n",
     "        )\n",
     "        \n",
-    "        # Write UC data immediately if streaming is enabled\n",
+    "        # Write UC data based on mode\n",
     "        if uc_raw_data.get(\"schemas\"):\n",
     "            raw_data[\"databricks_schema\"] = uc_raw_data[\"schemas\"]\n",
     "            if ENABLE_STREAMING_WRITES:\n",
@@ -273,8 +283,8 @@
     "        \n",
     "        if uc_raw_data.get(\"tables\"):\n",
     "            if ENABLE_STREAMING_WRITES:\n",
-    "                # Write tables immediately in streaming mode\n",
-    "                data_processor.write_single_raw_table(\"databricks_table\", uc_raw_data[\"tables\"])\n",
+    "                # Tables already written per-catalog via callback\n",
+    "                print(f\"[UC] Tables already written via streaming callback\")\n",
     "            else:\n",
     "                # Collect for batch mode\n",
     "                raw_data[\"databricks_table\"] = uc_raw_data[\"tables\"]\n",
