--- a/unity_catalog.ipynb
+++ b/unity_catalog.ipynb
@@ -33,6 +33,7 @@
    },
    "outputs": [],
    "source": [
+    "import gc\n",
     "import time\n",
     "import requests\n",
     "import threading\n",
@@ -79,7 +80,8 @@
     "    while not stop_event.is_set():\n",
     "        try:\n",
     "            # Simple operation to keep session alive\n",
-    "            spark.sql(\"SELECT 1\").collect()\n",
+    "            df = spark.sql(\"SELECT 1\")\n",
+    "            df_count = df.count()\n",
     "            ping_count += 1\n",
     "            print(f\"[KEEP-ALIVE] ✓ Ping #{ping_count} successful (interval: {interval}s)\")\n",
     "            time.sleep(interval)\n",
@@ -208,10 +210,14 @@
     "        catalog_limit: int = 0,\n",
     "        schema_limit_per_catalog: int = 0,\n",
     "        max_workers: int = 20,\n",
-    "        spark = None\n",
+    "        spark = None,\n",
+    "        write_callback = None\n",
     "    ) -> Tuple[Dict[str, int], Dict[str, List[Dict[str, any]]]]:\n",
     "        \"\"\"\n",
     "        Enumerate Unity Catalog with configurable limits and threading.\n",
+    "        \n",
+    "        Args:\n",
+    "            write_callback: Optional function(table_type, records) to write data per catalog\n",
     "        \n",
     "        Returns tuple of (counts, raw_data):\n",
     "        - counts: dict with uc_catalogs, uc_schemas, uc_tables, managed_tables, external_tables\n",
@@ -264,49 +270,58 @@
     "            print(f\"[UC] Catalogs to scan: {len(catalogs)} → {catalogs[:5]}{' …' if len(catalogs)>5 else ''}\")\n",
     "\n",
     "            total_schemas = total_tables = managed = external = 0\n",
-    "            futures = []\n",
-    "            queued_catalogs = 0\n",
     "\n",
     "            with ThreadPoolExecutor(max_workers=max_workers) as ex:\n",
-    "                # Queue up all schema-table enumeration tasks\n",
-    "                for cat in catalogs:\n",
+    "                # Process catalogs ONE AT A TIME for better memory management\n",
+    "                for cat_idx, cat in enumerate(catalogs, 1):\n",
     "                    schemas = self.get_schemas_for_catalog(cat, schema_limit_per_catalog)\n",
     "                    total_schemas += len(schemas)\n",
-    "                    print(f\"[UC] {cat}: {len(schemas)} schemas (limit={schema_limit_per_catalog or 'ALL'})\")\n",
+    "                    print(f\"[UC] [{cat_idx}/{len(catalogs)}] {cat}: {len(schemas)} schemas\")\n",
     "                    \n",
-    "                    # Capture schema data\n",
+    "                    # Queue table enumeration for THIS catalog only\n",
+    "                    catalog_futures = []\n",
     "                    for s in schemas:\n",
     "                        raw_data[\"schemas\"].append({\n",
     "                            \"catalog_name\": cat,\n",
     "                            \"schema_name\": s,\n",
     "                            \"full_name\": f\"{cat}.{s}\"\n",
     "                        })\n",
-    "                        # Queue table enumeration with full data\n",
-    "                        futures.append(ex.submit(self.list_tables_for_schema_with_data, cat, s))\n",
+    "                        catalog_futures.append(ex.submit(self.list_tables_for_schema_with_data, cat, s))\n",
     "                        time.sleep(0.002)  # Small delay to avoid overwhelming the API\n",
     "                    \n",
-    "                    queued_catalogs += 1\n",
-    "                    if queued_catalogs % 5 == 0:\n",
-    "                        print(f\"[UC] Heartbeat: queued {queued_catalogs}/{len(catalogs)} catalogs\")\n",
-    "\n",
-    "                # Process results as they complete\n",
-    "                for i, f in enumerate(as_completed(futures), 1):\n",
-    "                    table_data = f.result()\n",
+    "                    # Process results for THIS catalog only\n",
+    "                    catalog_tables = []\n",
+    "                    for f in as_completed(catalog_futures):\n",
+    "                        table_data = f.result()\n",
+    "                        if table_data:\n",
+    "                            catalog_tables.extend(table_data)\n",
+    "                            \n",
+    "                            # Count stats\n",
+    "                            for tbl in table_data:\n",
+    "                                total_tables += 1\n",
+    "                                if tbl.get(\"table_type\") == \"MANAGED\":\n",
+    "                                    managed += 1\n",
+    "                                elif tbl.get(\"table_type\") == \"EXTERNAL\":\n",
+    "                                    external += 1\n",
     "                    \n",
-    "                    if table_data:\n",
-    "                        # Add all tables to raw_data\n",
-    "                        raw_data[\"tables\"].extend(table_data)\n",
-    "                        \n",
-    "                        # Count stats\n",
-    "                        for tbl in table_data:\n",
-    "                            total_tables += 1\n",
-    "                            if tbl.get(\"table_type\") == \"MANAGED\":\n",
-    "                                managed += 1\n",
-    "                            elif tbl.get(\"table_type\") == \"EXTERNAL\":\n",
-    "                                external += 1\n",
+    "                    # Write immediately for this catalog (if callback provided)\n",
+    "                    if catalog_tables:\n",
+    "                        if write_callback:\n",
+    "                            print(f\"[UC] Writing {len(catalog_tables)} tables for catalog '{cat}'\")\n",
+    "                            write_callback(\"databricks_table\", catalog_tables)\n",
+    "                            del catalog_tables  # Explicit memory cleanup\n",
+    "                        else:\n",
+    "                            # Batch mode - collect all\n",
+    "                            raw_data[\"tables\"].extend(catalog_tables)\n",
+    "                            del catalog_tables\n",
     "                    \n",
-    "                    if i % 200 == 0:\n",
-    "                        print(f\"[UC] Heartbeat: processed {i} schema-table batches (tables so far={total_tables})\")\n",
+    "                    # Periodic garbage collection (every 100 catalogs)\n",
+    "                    if cat_idx % 100 == 0:\n",
+    "                        gc.collect()\n",
+    "                        print(f\"[UC] Memory checkpoint at catalog {cat_idx}/{len(catalogs)}\")\n",
+    "                    \n",
+    "                    if cat_idx % 5 == 0:\n",
+    "                        print(f\"[UC] Progress: {cat_idx}/{len(catalogs)} catalogs, {total_tables} tables\")\n",
     "\n",
     "            out[\"uc_schemas\"] = total_schemas\n",
     "            out[\"uc_tables\"] = total_tables\n",
@@ -359,13 +374,15 @@
     "    catalog_limit: int = UC_CATALOG_LIMIT,\n",
     "    schema_limit_per_catalog: int = UC_SCHEMA_LIMIT_PER_CATALOG,\n",
     "    max_workers: int = UC_MAX_WORKERS,\n",
-    "    spark = None\n",
+    "    spark = None,\n",
+    "    write_callback = None\n",
     ") -> Tuple[Dict[str, int], Dict[str, List[Dict[str, any]]]]:\n",
     "    \"\"\"\n",
     "    Wrapper for Unity Catalog enumeration.\n",
     "    \n",
     "    Args:\n",
     "        spark: SparkSession to keep alive during long enumeration\n",
+    "        write_callback: Optional function(table_type, records) to write data per catalog\n",
     "    \n",
     "    Returns tuple of (counts, raw_data):\n",
     "    - counts: dict with catalog/schema/table counts\n",
@@ -378,7 +395,8 @@
     "        catalog_limit=catalog_limit,\n",
     "        schema_limit_per_catalog=schema_limit_per_catalog,\n",
     "        max_workers=max_workers,\n",
-    "        spark=spark\n",
+    "        spark=spark,\n",
+    "        write_callback=write_callback\n",
     "    )"
    ]
   }
